--- a/Cameras.html
+++ b/Cameras.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=7,IE=9" />
 		<!--The viewport meta tag is used to improve the presentation and behavior of the samples on iOS devices-->
 		<meta name="viewport" content="initial-scale=1, maximum-scale=1,user-scalable=no"/>
-		<title> World Street Map</title>
+		<title>Traffic Cameras</title>
 		<link rel="stylesheet" type="text/css" href="http://serverapi.arcgisonline.com/jsapi/arcgis/2.8/js/dojo/dijit/themes/claro/claro.css">
 		<style>
 			html, body { height: 100%; width: 100%; margin: 0; padding: 0; }
