--- a/TrafficFlow.html
+++ b/TrafficFlow.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -15,9 +15,6 @@
 		<script src="http://serverapi.arcgisonline.com/jsapi/arcgis/?v=2.8"></script>
 		<script src="scripts/apikey.js"></script>
 		<script src="scripts/travelerInfoGraphicsLayer.js"></script>
-		<script>
-	
-		</script>
 		<script src="scripts/TrafficFlow.js"></script>
 	</head>
  
