--- a/Cameras.html
+++ b/Cameras.html
@@ -6,13 +6,13 @@
 		<!--The viewport meta tag is used to improve the presentation and behavior of the samples on iOS devices-->
 		<meta name="viewport" content="initial-scale=1, maximum-scale=1,user-scalable=no"/>
 		<title>Traffic Cameras</title>
-		<link rel="stylesheet" type="text/css" href="http://serverapi.arcgisonline.com/jsapi/arcgis/2.8/js/dojo/dijit/themes/claro/claro.css">
+		<link rel="stylesheet" type="text/css" href="http://serverapi.arcgisonline.com/jsapi/arcgis/3.0/js/dojo/dijit/themes/claro/claro.css">
 		<style>
 			html, body { height: 100%; width: 100%; margin: 0; padding: 0; }
 			#map{padding:0;}
 		</style>
-		<script type=>var djConfig = {parseOnLoad: true};</script>
-		<script src="http://serverapi.arcgisonline.com/jsapi/arcgis/?v=2.8"></script>
+		<script>var djConfig = {parseOnLoad: true};</script>
+		<script src="http://serverapi.arcgisonline.com/jsapi/arcgis/?v=3.0"></script>
 		<script src="scripts/apikey.js"></script>
 		<script src="scripts/cameraGraphicsLayer.js"></script>
 		<script>
