Set async module loading to true on TrafficFlow.html.

--- a/TrafficFlow.html
+++ b/TrafficFlow.html
@@ -12,7 +12,7 @@
 			#map{padding:0;}
 		</style>
 		<script>var dojoConfig = {
-			async: false,
+			async: true,
 			parseOnLoad: true,
 			packages: [
 				{
