--- a/Cameras.html
+++ b/Cameras.html
@@ -6,6 +6,7 @@
 		<!--The viewport meta tag is used to improve the presentation and behavior of the samples on iOS devices-->
 		<meta name="viewport" content="initial-scale=1, maximum-scale=1,user-scalable=no"/>
 		<title>Traffic Cameras</title>
+		<link rel="stylesheet" type="text/css" href="http://serverapi.arcgisonline.com/jsapi/arcgis/3.2/js/esri/css/esri.css" />
 		<link rel="stylesheet" type="text/css" href="http://serverapi.arcgisonline.com/jsapi/arcgis/3.1/js/dojo/dijit/themes/claro/claro.css">
 		<style>
 			html, body { height: 100%; width: 100%; margin: 0; padding: 0; }
@@ -21,7 +22,7 @@
 				}
 			]
 		};</script>
-		<script src="http://serverapi.arcgisonline.com/jsapi/arcgis/?v=3.1"></script>
+		<script src="http://serverapi.arcgisonline.com/jsapi/arcgis/?v=3.2"></script>
 		<script src="scripts/apikey.js"></script>
 		<script src="scripts/Cameras.js"></script>
 	</head>
