--- a/TrafficFlow.html
+++ b/TrafficFlow.html
@@ -6,10 +6,21 @@
 		<!--The viewport meta tag is used to improve the presentation and behavior of the samples on iOS devices-->
 		<meta name="viewport" content="initial-scale=1, maximum-scale=1,user-scalable=no"/>
 		<title> Traffic Flow</title>
-		<link rel="stylesheet" type="text/css" href="http://serverapi.arcgisonline.com/jsapi/arcgis/3.0/js/dojo/dijit/themes/claro/claro.css">
+		<link rel="stylesheet" type="text/css" href="http://serverapi.arcgisonline.com/jsapi/arcgis/3.2/js/esri/css/esri.css" />
+		<link rel="stylesheet" type="text/css" href="http://serverapi.arcgisonline.com/jsapi/arcgis/3.2/js/dojo/dijit/themes/claro/claro.css">
 		<style>
-			html, body { height: 100%; width: 100%; margin: 0; padding: 0; }
-			#map{padding:0;}
+			html, body { 
+				height: 100%; 
+				width: 100%; 
+				margin: 0; 
+				padding: 0; 
+			}
+			#map{
+				padding:0;
+				overflow: hidden;
+				width: 100%;
+				height: 100%;
+			}
 		</style>
 		<script>var dojoConfig = {
 			async: true,
@@ -21,16 +32,12 @@
 				}
 			]
 		};</script>
-		<script src="http://serverapi.arcgisonline.com/jsapi/arcgis/?v=3.1"></script>
+		<script src="http://serverapi.arcgisonline.com/jsapi/arcgis/?v=3.2"></script>
 		<script src="scripts/apikey.js"></script>
 		<script src="scripts/TrafficFlow.js"></script>
 	</head>
- 
-  <body class="claro">
-	<div dojoType="dijit.layout.BorderContainer" design="headline" gutters="false" style="width: 100%; height: 100%; margin: 0;">
-		<div id="map" dojoType="dijit.layout.ContentPane" region="center" style="overflow:hidden;"></div>
-	</div>
-
-  </body>
+	<body>
+		<div id="map" class="claro"></div>
+	</body>
 
 </html> 
