Camera images are now displayed in a dojox Lightbox when a camera graphic is clicked.

--- a/Cameras.html
+++ b/Cameras.html
@@ -7,7 +7,8 @@
 		<meta name="viewport" content="initial-scale=1, maximum-scale=1,user-scalable=no"/>
 		<title>Traffic Cameras</title>
 		<link rel="stylesheet" type="text/css" href="http://serverapi.arcgisonline.com/jsapi/arcgis/3.2/js/esri/css/esri.css" />
-		<link rel="stylesheet" type="text/css" href="http://serverapi.arcgisonline.com/jsapi/arcgis/3.1/js/dojo/dijit/themes/claro/claro.css">
+		<link rel="stylesheet" type="text/css" href="http://serverapi.arcgisonline.com/jsapi/arcgis/3.2/js/dojo/dijit/themes/claro/claro.css">
+		<link rel="stylesheet" type="text/css" href="http://serverapi.arcgisonline.com/jsapi/arcgis/3.2/js/dojo/dojox/image/resources/Lightbox.css">
 		<style>
 			html, body { 
 				height: 100%; 
@@ -37,8 +38,8 @@
 		<script src="scripts/Cameras.js"></script>
 	</head>
 
-	<body>
-		<div id="map" class="claro"></div>
+	<body class="claro">
+		<div id="map"></div>
 	</body>
 
 </html> 
