--- a/Cameras.html
+++ b/Cameras.html
@@ -30,11 +30,15 @@
 				{
 					name: "wsdot",
 					location: location.pathname.replace(/\/[^\/]+$/, "") + "/scripts/wsdot"
+				},
+				{
+					name: "apikey",
+					location: location.pathname.replace(/\/[^\/]+$/, "") + "/scripts",
+					main: "apikey"
 				}
 			]
 		};</script>
 		<script src="http://serverapi.arcgisonline.com/jsapi/arcgis/?v=3.2"></script>
-		<script src="scripts/apikey.js"></script>
 		<script src="scripts/Cameras.js"></script>
 	</head>
 
