--- a/TrafficFlow.html
+++ b/TrafficFlow.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=7,IE=9" />
 		<!--The viewport meta tag is used to improve the presentation and behavior of the samples on iOS devices-->
 		<meta name="viewport" content="initial-scale=1, maximum-scale=1,user-scalable=no"/>
-		<title> Traffic Flow</title>
+		<title>Traffic Flow</title>
 		<link rel="stylesheet" type="text/css" href="http://serverapi.arcgisonline.com/jsapi/arcgis/3.2/js/esri/css/esri.css" />
 		<link rel="stylesheet" type="text/css" href="http://serverapi.arcgisonline.com/jsapi/arcgis/3.2/js/dojo/dijit/themes/claro/claro.css">
 		<style>
@@ -29,15 +29,19 @@
 				{
 					name: "wsdot",
 					location: location.pathname.replace(/\/[^\/]+$/, "") + "/scripts/wsdot"
+				},
+				{
+					name: "apikey",
+					location: location.pathname.replace(/\/[^\/]+$/, "") + "/scripts",
+					main: "apikey"
 				}
 			]
 		};</script>
 		<script src="http://serverapi.arcgisonline.com/jsapi/arcgis/?v=3.2"></script>
-		<script src="scripts/apikey.js"></script>
 		<script src="scripts/TrafficFlow.js"></script>
 	</head>
-	<body>
-		<div id="map" class="claro"></div>
+	<body class="claro">
+		<div id="map"></div>
 	</body>
 
 </html> 
