--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<h1>WSDOT Traveler Info / ArcGIS JS API Demos</h1>
 		<ul>
 			<li><a href="Cameras.html">Cameras</a></li>
+			<li><a href="Alerts.html">Traffic Alerts</a></li>
 			<li><a href="TrafficFlow.html">Traffic Flow</a></li>
 		</ul>
 	</body>
