--- a/Cameras.html
+++ b/Cameras.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -6,9 +6,9 @@
 		<!--The viewport meta tag is used to improve the presentation and behavior of the samples on iOS devices-->
 		<meta name="viewport" content="initial-scale=1, maximum-scale=1,user-scalable=no"/>
 		<title>Traffic Cameras</title>
-		<link rel="stylesheet" type="text/css" href="http://serverapi.arcgisonline.com/jsapi/arcgis/3.2/js/esri/css/esri.css" />
-		<link rel="stylesheet" type="text/css" href="http://serverapi.arcgisonline.com/jsapi/arcgis/3.2/js/dojo/dijit/themes/claro/claro.css">
-		<link rel="stylesheet" type="text/css" href="http://serverapi.arcgisonline.com/jsapi/arcgis/3.2/js/dojo/dojox/image/resources/Lightbox.css">
+		<link rel="stylesheet" type="text/css" href="http://serverapi.arcgisonline.com/jsapi/arcgis/3.3/js/esri/css/esri.css" />
+		<link rel="stylesheet" type="text/css" href="http://serverapi.arcgisonline.com/jsapi/arcgis/3.3/js/dojo/dijit/themes/claro/claro.css">
+		<link rel="stylesheet" type="text/css" href="http://serverapi.arcgisonline.com/jsapi/arcgis/3.3/js/dojo/dojox/image/resources/Lightbox.css">
 		<style>
 			html, body { 
 				height: 100%; 
@@ -30,15 +30,10 @@
 				{
 					name: "wsdot",
 					location: location.pathname.replace(/\/[^\/]+$/, "") + "/scripts/wsdot"
-				},
-				{
-					name: "apikey",
-					location: location.pathname.replace(/\/[^\/]+$/, "") + "/scripts",
-					main: "apikey"
 				}
 			]
 		};</script>
-		<script src="http://serverapi.arcgisonline.com/jsapi/arcgis/?v=3.2"></script>
+		<script src="http://serverapi.arcgisonline.com/jsapi/arcgis/?v=3.3"></script>
 		<script src="scripts/Cameras.js"></script>
 	</head>
 
